Fix menu not closing and dark mode overflow issue

--- a/src/components/DarkModeButton/DarkModeButton.module.css
+++ b/src/components/DarkModeButton/DarkModeButton.module.css
@@ -4,21 +4,8 @@
   outline-offset: var(--outline-offset);
   background: transparent;
   color: var(--color);
-  overflow: visible;
-}
-
-.wrapper svg {
-  transition: transform 600ms;
 }
 
 .wrapper:hover {
   cursor: pointer;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .wrapper:hover svg,
-  .wrapper:focus svg {
-    transform: scale(1.2);
-    transition: transform 200ms;
-  }
 }
